# deep-ignorance

./: .gitignore  CLAUDE.md  Dockerfile.evals  Dockerfile.filtering  Dockerfile.training  HF_README.md  Makefile  README.md  commands.sh  count_tokens.py  download_filtered_dataset.py  explore.py  filter.py  finetune_attack.py  finetune_simple.py  finetune_simple_v2.py  pyproject.toml  svd.py  svd_plot.py  sweep.py
lm_eval_results/EleutherAI__deep-ignorance-unfiltered/: results_2025-10-10T21-29-19.873011.json  results_2025-10-10T21-41-17.274711.json  samples_wmdp_bio_robust_rewritten_gibberish_2025-10-10T21-41-17.274711.jsonl  samples_wmdp_bio_robust_rewritten_nonsensical_biology_2025-10-10T21-29-19.873011.jsonl  samples_wmdp_bio_robust_rewritten_nonsensical_biology_2025-10-10T21-41-17.274711.jsonl  samples_wmdp_bio_robust_rewritten_real_words_sciency_2025-10-10T21-41-17.274711.jsonl
lm_eval_tasks/wmdp_bio_cloze_verified/: _wmdp_bio_cloze_verified.yaml
lm_eval_tasks/wmdp_bio_robust_rewritten/: _default_template_yaml  _wmdp_bio_robust_rewritten.yaml  wmdp_bio_robust_rewritten_gibberish copy.yaml  wmdp_bio_robust_rewritten_gibberish.yaml  wmdp_bio_robust_rewritten_nonsensical_biology.yaml
pretraining/: annealing_neox_config.yml  pretraining_neox_config.yml
website/: index.html  styles.css
